# stellar-give-bootcamp-week4

./: .gitignore  README.md  environments.toml
contracts/no_loss_auction/: Cargo.toml
contracts/no_loss_auction/src/: lib.rs  test.rs
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/api/rates/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/auctions/: page.tsx
frontend/src/app/auctions/[id]/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: AppProviders.tsx  AuctionDetail.tsx  AuctionGrid.tsx  AuctionImage.tsx  AuctionLifecycleGuide.tsx  CountdownTimer.tsx  CurrencyAmountField.tsx  FaqSection.tsx  Footer.tsx  Header.tsx  HeroFeaturedAuction.tsx  ImageUploadField.tsx  LegalLayout.tsx  Providers.tsx  ThemeToggle.tsx  WalletButton.tsx
frontend/src/hooks/: useAuctions.ts
frontend/src/lib/: auction.ts  config.ts  currency.ts  device.ts  errors.ts  imageUrl.ts  theme.tsx  uploadImage.ts  userAuctions.ts  utils.ts  wallet.tsx  wallets.ts
scripts/: deploy-testnet.sh
